Recreated database after long hiatus

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -93,29 +93,31 @@
             </div>
             <!-- END: Login Info -->
             <!-- BEGIN: Login Form -->
-            <div class="g-col-2 g-col-xl-1 h-screen h-xl-auto d-flex py-5 py-xl-0 my-10 my-xl-0">
-                <div class="my-auto mx-auto ms-xl-20 bg-white dark-bg-dark-1 bg-xl-transparent px-5 px-sm-8 py-8 p-xl-0 rounded-2 shadow-md shadow-xl-none w-full w-sm-3/4 w-lg-2/4 w-xl-auto">
-                    <h2 class="intro-x fw-bold fs-2xl fs-xl-3xl text-center text-xl-start">
-                        Sign In
-                    </h2>
-                    <div class="intro-x mt-2 text-gray-500 d-xl-none text-center">A few more clicks to sign in to your account. Manage all your e-commerce accounts in one place</div>
-                    <div class="intro-x mt-8">
-                        <input type="text" asp-for="Input.Email" autocomplete="username" class="intro-x login__input form-control py-3 px-4 border-gray-300 d-block" placeholder="Email">
-                        <input asp-for="Input.Password" type="password" class="intro-x login__input form-control py-3 px-4 border-gray-300 d-block mt-4" placeholder="Password">
-                    </div>
-                    <div class="intro-x d-flex text-gray-700 dark-text-gray-600 fs-xs fs-sm-sm mt-4">
-                        <div class="d-flex align-items-center me-auto">
-                            <input id="remember-me" type="checkbox" class="form-check-input border me-2">
-                            <label class="cursor-pointer select-none" for="remember-me">Remember me</label>
+            <form id="account" method="post" class="row">
+                <div class="g-col-2 g-col-xl-1 h-screen h-xl-auto d-flex py-5 py-xl-0 my-10 my-xl-0">
+                    <div class="my-auto mx-auto ms-xl-20 bg-white dark-bg-dark-1 bg-xl-transparent px-5 px-sm-8 py-8 p-xl-0 rounded-2 shadow-md shadow-xl-none w-full w-sm-3/4 w-lg-2/4 w-xl-auto">
+                        <h2 class="intro-x fw-bold fs-2xl fs-xl-3xl text-center text-xl-start">
+                            Sign In
+                        </h2>
+                        <div class="intro-x mt-2 text-gray-500 d-xl-none text-center">A few more clicks to sign in to your account. Manage all your e-commerce accounts in one place</div>
+                        <div class="intro-x mt-8">
+                            <input type="text" asp-for="Input.Email" autocomplete="username" class="intro-x login__input form-control py-3 px-4 border-gray-300 d-block" placeholder="Email">
+                            <input asp-for="Input.Password" type="password" class="intro-x login__input form-control py-3 px-4 border-gray-300 d-block mt-4" placeholder="Password">
                         </div>
-                        <a href="">Forgot Password?</a>
-                    </div>
-                    <div class="intro-x mt-5 mt-xl-8 text-center text-xl-start">
-                        <button type="submit" class="btn btn-primary py-3 px-4 w-full w-xl-32 me-xl-3 align-top">Login</button>
-                        <button class="btn btn-outline-secondary py-3 px-4 w-full w-xl-32 mt-3 mt-xl-0 align-top">Sign up</button>
+                        <div class="intro-x d-flex text-gray-700 dark-text-gray-600 fs-xs fs-sm-sm mt-4">
+                            <div class="d-flex align-items-center me-auto">
+                                <input id="remember-me" type="checkbox" class="form-check-input border me-2">
+                                <label class="cursor-pointer select-none" for="remember-me">Remember me</label>
+                            </div>
+                            <a href="">Forgot Password?</a>
+                        </div>
+                        <div class="intro-x mt-5 mt-xl-8 text-center text-xl-start">
+                            <button type="submit" class="btn btn-primary py-3 px-4 w-full w-xl-32 me-xl-3 align-top">Login</button>
+                            <button class="btn btn-outline-secondary py-3 px-4 w-full w-xl-32 mt-3 mt-xl-0 align-top" asp-area="Identity" asp-page="/Account/Register">Sign up</button>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </form>
             <!-- END: Login Form -->
         </div>
     </div>
