--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -286,7 +286,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         <li>
                             <a asp-area="Identity" asp-page="/Account/Login" class="side-menu" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                                 <div class="side-menu__icon"> <i data-feather="user" class="d-block mx-auto"></i> </div>
-                                <div class="side-menu__title"> Log In </div>
+                                <div class="side-menu__title"> Hello Log In </div>
                             </a>
                         </li>
                     }
